fix: increase gap size because it was hiding text

--- a/src/components/Stacks/style.scss
+++ b/src/components/Stacks/style.scss
@@ -28,7 +28,7 @@
 .stacks-content {
   display: flex;
   flex-wrap: wrap; /* Permite que os elementos se movam para a linha seguinte quando não há espaço suficiente */
-  gap: 20px;
+  gap: 40px;
   width: 100%;
   margin: 0 auto;
 
@@ -58,6 +58,8 @@
 
     p {
       font-size: 25px;
+      text-align: center;
+      width: 100%;
     }
 
     h1 {
